# mesos

./: .gitignore  .reviewboardrc  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.OURS.macosx  configure.OURS.rcluster  configure.ac  mesos-master-dev.in  mesos-slave-dev.in
src/: CMakeLists.txt  Makefile.am  Makefile.in  allocator_factory.cpp  configurator.cpp  configurator.hpp  cpp_test_framework.cpp  fair_allocator.cpp  fair_allocator.hpp  launcher.cpp  local.cpp  logging.cpp  lxc_isolation_module.cpp  lxc_isolation_module.hpp  master.cpp  master.hpp  master_detector.cpp  master_main.cpp  master_webui.cpp  memhog.cpp  memhog_executor.cpp  mesos.pb.cc  mesos.pb.d  mesos.pb.h  messages.cpp  messages.hpp  nexus_exec.cpp  nexus_sched.cpp  option.hpp  process_based_isolation_module.cpp  projd.cpp  simple_allocator.cpp  simple_allocator.hpp  slave.cpp  slave.hpp  slave_main.cpp  slave_webui.cpp  test_framework.cpp  zookeeper.cpp
src/common/: factory.hpp  foreach.hpp  hashmap.hpp  hashset.hpp  http.cpp  http.hpp  logging.cpp  logging.hpp  multihashmap.hpp  option.hpp  process_utils.hpp  protobuf_utils.cpp  protobuf_utils.hpp  resources.cpp  resources.hpp  result.hpp  seconds.hpp  status_utils.hpp  strings.hpp  try.hpp  type_utils.hpp  utils.hpp  uuid.hpp  webui_utils.cpp  webui_utils.hpp  zookeeper.cpp  zookeeper.hpp  zookeeper_candidate.cpp
src/config/: config.hpp.in
src/configurator/: configuration.hpp  configurator.cpp  configurator.hpp  option.hpp
src/detector/: detector.cpp  url_processor.cpp  url_processor.hpp
src/docker/: docker.cpp  docker.hpp
src/ec2/: nexus_ec2.py
src/examples/: Makefile.in  cpp_test_framework.cpp  loadgen.cpp  loadgen_executor.cpp  long_lived_framework.cpp  memhog.cpp  no_executor_framework.cpp  scheduled_memhog.cpp  test_framework.cpp
src/examples/java/: TestExceptionFramework.java  TestFramework.java  TestMultipleExecutorsFramework.java  test-exception-framework  test-executor  test-framework  test-multiple-executors-framework
src/examples/python/: Makefile.in  test-executor  test-framework  test_framework.py
src/exec/: exec.cpp
src/health-check/: main.cpp
src/java/TestFramework/: TestFramework.java  test_executor  test_executor.py  test_framework
src/java/jni/: construct.cpp  construct.d  convert.cpp  convert.d  mesos_MesosSchedulerDriver.cpp  org_apache_mesos_Log.cpp  org_apache_mesos_Log.d  org_apache_mesos_Log.h  org_apache_mesos_Log_Entry.h  org_apache_mesos_Log_OperationFailedException.h  org_apache_mesos_Log_Position.h  org_apache_mesos_Log_Reader.h  org_apache_mesos_Log_Writer.h  org_apache_mesos_Log_WriterFailedException.h  org_apache_mesos_MesosExecutorDriver.cpp  org_apache_mesos_MesosExecutorDriver.d  org_apache_mesos_MesosExecutorDriver.h  org_apache_mesos_MesosSchedulerDriver.cpp  org_apache_mesos_MesosSchedulerDriver.d  org_apache_mesos_MesosSchedulerDriver.h
src/java/mesos/: ExecutorInfo.java  FrameworkID.java  FrameworkMessage.java  MesosSchedulerDriver.java  OfferID.java  Scheduler.java  SchedulerDriver.java  SlaveID.java  TaskDescription.java  TaskID.java  TaskState.java  TaskStatus.java
src/java/src/mesos/: Executor.java  ExecutorArgs.java  (+11 more)
src/launcher/: executor.cpp  launcher.cpp  launcher.d  launcher.hpp  main.cpp
src/linux/: cgroups.cpp  cgroups.hpp
src/local/: local.cpp  local.d  local.hpp
src/log/: cache.hpp  coordinator.cpp  coordinator.d  coordinator.hpp  log.cpp  log.hpp  network.hpp  replica.cpp  replica.d  replica.hpp
src/master/: CMakeLists.txt  allocator.hpp  allocator_factory.cpp  allocator_factory.d  constants.hpp  frameworks_manager.d  frameworks_manager.hpp  graphql.hpp  http.cpp  http.d  http.hpp  main.cpp  master.cpp  master.d  master.hpp  simple_allocator.cpp  simple_allocator.d  simple_allocator.hpp  slaves_manager.cpp  slaves_manager.d  slaves_manager.hpp  slot_allocator.cpp  slot_allocator.hpp  state.cpp  state.hpp  webui.cpp  webui.d  webui.hpp
src/mesos/: main.cpp
src/messages/: log.hpp  log.pb.cc  log.pb.d  log.pb.h  log.proto  messages.pb.cc  messages.pb.d  messages.pb.h  messages.proto
src/messaging/: messages.hpp  messages.proto
src/python/: setup.py.in
src/python/native/: mesos_executor_driver_impl.cpp  mesos_executor_driver_impl.hpp  mesos_scheduler_driver_impl.cpp  mesos_scheduler_driver_impl.hpp  proxy_executor.cpp  proxy_scheduler.cpp  proxy_scheduler.hpp
src/python/src/: mesos.py
src/scaling/: 10frameworks_1task_10seconds.py  1frameworks_1task_10seconds.py  nested_exec.cpp  nested_exec.py  nested_exec.sh  normaldist.py  scaling_exec  scaling_exec.py  scaling_sched.py
src/sched/: sched.cpp
src/slave/: flags.hpp  http.cpp  http.hpp  isolation_module.hpp  lxc_isolation_module.cpp  lxc_isolation_module.hpp  main.cpp  process_based_isolation_module.cpp  process_based_isolation_module.hpp  reaper.cpp  slave.cpp  slave.hpp  webui.cpp  webui.hpp
src/slave/containerizer/: composing.cpp  containerizer.cpp  docker.cpp
src/swig/: mesos.i
src/swig/java/: TestExceptionFramework.java  TestFramework.java
src/swig/python/: test_framework.py
src/swig/ruby/: test_framework.rb
src/tests/: Makefile.in  base_zookeeper_test.cpp  base_zookeeper_test.hpp  date_utils_test.cpp  docker_containerizer_tests.cpp  docker_tests.cpp  environment.cpp  exception_tests.cpp  external_tests.cpp  fault_tolerance_tests.cpp  fault_tolerant_tests.cpp  jvm.cpp  jvm.hpp  log_tests.cpp  main.cpp  master_test.cpp  master_tests.cpp  multihashmap_tests.cpp  resource_offer_tests.cpp  resource_offers_tests.cpp  resources_tests.cpp  script.cpp  slave_recovery_tests.cpp  slave_tests.cpp  test_configurator.cpp  test_master.cpp  test_sample_frameworks.cpp  testing_utils.cpp  utils.cpp  utils.hpp  zookeeper_server.cpp  zookeeper_server.hpp  zookeeper_server_tests.cpp  zookeeper_tests.cpp
src/webui/common/: webui_lib.py
src/webui/master/: framework.tpl  index.tpl  webui.py
src/webui/slave/: framework.tpl  index.tpl  webui.py
src/webui/static/: stylesheet.css
src/zookeeper/: credentials.cpp  credentials.hpp  group.cpp  group.hpp  zookeeper.cpp  zookeeper.hpp
(+54 files in other folders)
